# projekt

./: .appveyor.yml  .gitignore  .travis.yml  1travis.yml  2travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  kp.sln  main.vcxproj  main.vcxproj.filters
_build/: CMakeCache.txt
include/: drawer.hpp  header.hpp  ui.hpp
main.dir/Debug/main.tlog/: CustomBuild.write.1.tlog  main.lastbuildstate
source/: main.cpp  ui.cpp
tessdata/: eng.traineddata
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
